# reasoning-and-agents-education

./: .gitignore  L00_ModuleIntro.ipynb  L00_ModuleIntro.slides.html  L01_ReasoningTechniques_for_LLMs_student.ipynb  L02_ClassicalSearch_for_ProblemSolving_student.ipynb  L03_Introduction_to_TestTimeCompute_student.ipynb  LICENSE  README.md  eight_puzzle.py  pyproject.toml
